[gd_scene load_steps=10 format=3 uid="uid://dg4ppy8ynqeux"]

[ext_resource type="PackedScene" path="res://Editor/Scenes/ControlPanel/ControlPanel.tscn" id="1"]
[ext_resource type="Theme" uid="uid://cee0yehrjy3kp" path="res://Themes/Default/GoDAWTheme.tres" id="2"]
[ext_resource type="PackedScene" path="res://Editor/Scenes/SongEditor/SongEditor.tscn" id="3"]
[ext_resource type="Script" uid="uid://6pxioyca0vtd" path="res://Main.gd" id="4"]
[ext_resource type="PackedScene" path="res://Editor/Scenes/Instruments/InstrumentsPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Editor/Scenes/TopMenu/TopMenu.tscn" id="6"]
[ext_resource type="PackedScene" path="res://Editor/Scenes/Dialogues/TrackEditor/TrackEditor.tscn" id="7"]
[ext_resource type="Script" uid="uid://bryrm2ttfmhmv" path="res://Editor/Scenes/Dialogues/DialogManager.gd" id="8"]
[ext_resource type="PackedScene" path="res://Editor/Scenes/Dialogues/NewSong/NewSong.tscn" id="9"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("4")

[node name="TopMenu" parent="." instance=ExtResource("6")]
layout_mode = 2

[node name="Application" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="InstrumentsPanel" parent="Application" instance=ExtResource("5")]
layout_mode = 2

[node name="Main" type="VBoxContainer" parent="Application"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="ControlPanel" parent="Application/Main" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 0

[node name="SongEditor" parent="Application/Main" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 3
margin_top = 34.0
margin_right = 1014.0
margin_bottom = 659.0

[node name="DialogManager" type="Control" parent="."]
layout_mode = 2
script = ExtResource("8")

[node name="ProgressDialog" type="PopupDialog" parent="DialogManager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.5
margin_top = -40.5
margin_right = 280.5
margin_bottom = 40.5
popup_exclusive = true
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="DialogManager/ProgressDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="DialogManager/ProgressDialog/VBoxContainer"]
layout_mode = 2
text = "Progressing"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="DialogManager/ProgressDialog/VBoxContainer"]
layout_mode = 2

[node name="Loading" type="PopupDialog" parent="DialogManager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.5
margin_top = -40.5
margin_right = 280.5
margin_bottom = 40.5
popup_exclusive = true
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="DialogManager/Loading"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="DialogManager/Loading/VBoxContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="DialogManager"]
access = 2
filters = PackedStringArray("*.wav ; Wav Files")

[node name="TrackEditor" parent="DialogManager" instance=ExtResource("7")]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="NewSong" parent="DialogManager" instance=ExtResource("9")]

[node name="ErrorDialog" type="WindowDialog" parent="DialogManager"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
margin_right = 480.0
margin_bottom = 140.0
window_title = "Error"
script = null

[node name="ScrollContainer" type="ScrollContainer" parent="DialogManager/ErrorDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorMessage" type="Label" parent="DialogManager/ErrorDialog/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pause" from="Application/Main/ControlPanel" to="Application/Main/SongEditor" method="_on_pause"]
[connection signal="play" from="Application/Main/ControlPanel" to="Application/Main/SongEditor" method="_on_play"]
[connection signal="stop" from="Application/Main/ControlPanel" to="Application/Main/SongEditor" method="_on_stop"]
[connection signal="confirmed" from="DialogManager/NewSong" to="DialogManager/NewSong" method="_confirmed"]
